# CSE-584-W25-ANN-Project

./: .gitignore  INSTALL.md  README.md  pyproject.toml  requirements.txt
config/: user.yaml
data/: download_datasets.sh
data/experiments/baseline_1/: config.json  trial0_schema0_workflow0.json  trial0_schema0_workflow1.json  trial0_schema0_workflow10.json  trial0_schema0_workflow11.json  trial0_schema0_workflow2.json  trial0_schema0_workflow3.json  trial0_schema0_workflow4.json  trial0_schema0_workflow5.json  trial0_schema0_workflow6.json  trial0_schema0_workflow7.json  trial0_schema0_workflow8.json  trial0_schema0_workflow9.json  trial0_schema10_workflow0.json  trial0_schema10_workflow1.json  trial0_schema10_workflow10.json  trial0_schema10_workflow11.json  trial0_schema10_workflow2.json  trial0_schema10_workflow3.json  trial0_schema10_workflow4.json  trial0_schema10_workflow5.json  trial0_schema10_workflow6.json  trial0_schema10_workflow7.json  trial0_schema10_workflow8.json  trial0_schema10_workflow9.json  trial0_schema11_workflow0.json  (+407 more)
src/: analysis.ipynb  attributes.py  basic_experiment.py  client.py  create_db.py  example.py  experiment.py  experiment_utils.py  fvecs.py  get_partitions.py  hol.py  multirange_partitioner.py  partition_algo.py  partitioner.py  predicates.py  search.py  sift.py  temp.ipynb  test_runner.py  tree_experiment.py  tree_partition_algo.py  tvl.py  utils.py  workload.py  workload_char.py
test/: .gitignore  README.md  client.py  create_db.py  download_datasets.sh  fvecs.py  partitioner.py  search.py  sift.py
(+45 files in other folders)
