[project]
name = "cse584"
version = "1.0.0"
description = "CSE 584 Project"
readme = "readme.txt"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pip>=25.0.1",
    "polars>=1.25.2",
    "pymilvus>=2.5.6",
    "pyqt5>=5.15.11",
    "tqdm>=4.67.1",
]
